--- a/Compare/Views/Home/Compare.cshtml
+++ b/Compare/Views/Home/Compare.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Site.Models.Compare
 
-@{Html.RenderPartial("_GamerTagSelector", new Site.Models.Gamers() {tag1 = Model.Player1.Name, tag2 = Model.Player2.Name});}
+@{Html.RenderPartial("_GamerTagSelector", new Site.Models.Gamers() {Tag1 = Model.Player1.Name, Tag2 = Model.Player2.Name});}
 
 <div class="row">   
 @{
