--- a/Compare/Content/Site.css
+++ b/Compare/Content/Site.css
@@ -3,7 +3,7 @@ body
     font-size: .85em;
     font-family: "Trebuchet MS" , Verdana, Helvetica, Sans-Serif;
     color: #232323;
-    background-color: #FFFFFF;
+    background-color: #FF0000;
 }
 
 header,
