--- a/Compare/Views/Shared/_Layout.cshtml
+++ b/Compare/Views/Shared/_Layout.cshtml
@@ -1,18 +1,16 @@
-﻿<!DOCTYPE html>
+﻿@using System.Web.Optimization
+<!DOCTYPE html>
 <html>
 <head>
     <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css" type="text/css" />
-    <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
-    <script src="@Url.Content("~/Scripts/jquery-1.9.1.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/bootstrap-tabs.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery.tablesorter.min.js")" type="text/javascript" ></script>
-    
+    @Styles.Render("~/Content/css")
 </head>
 
 <body>
-<div class ="container">
-    @RenderBody()
+    <div class ="container">
+        @Scripts.Render("~/bundles/js")
+        @RenderBody()
     </div>
 </body>
 </html>
