--- a/Compare/Views/Home/Compare.cshtml
+++ b/Compare/Views/Home/Compare.cshtml
@@ -4,116 +4,128 @@
 @{Html.RenderPartial("_GamerTagSelector", new Site.Models.Gamers() {Tag1 = Model.Player1.Name, Tag2 = Model.Player2.Name});}
 
 <div class="row">   
-@{
-    if (Model.Player1.Valid && Model.Player2.Valid)
-    {
-        <ul class="tabs" data-tabs="tabs">
-            <li class="active" ><a href="#genre">Genre Summary</a></li>
-            <li><a href="#games">Games</a></li>
-        </ul>
-         <div class ="pill-content">
-            <div class="active" id="genre">
-                <div class="span9">
-                    <table id="summaryScores" class="zebra-striped">
-                        <thead>
-                            <tr>
-                                <th>Genre</th>
-                                <th class="right">@Model.Player1.Name</th>
-                                <th class="right">@Model.Player2.Name</th>
-                                <th class="right">Difference</th>
-                                <th class="right">W</th>
-                                <th class="right">L</th>
-                                <th class="right">T</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                      @{
-                foreach (var genre in Model.Genre)
-                {
-                             <tr>
-                                <td>@genre.Genre</td>
-                                <td class="right">@genre.Tag1Score</td>
-                                <td class="right">@genre.Tag2Score</td>
-                                <td class="right">@{@Html.Raw((genre.Tag1Score - genre.Tag2Score).ToString())}</td>
-                                <td class="right">@genre.Wins</td>
-                                <td class="right">@genre.Loses</td>
-                                <td class="right">@genre.Ties</td>
-                             </tr>
+    @{
+        if (Model.Player1.Valid && Model.Player2.Valid)
+        {
+            <ul class="tabs" data-tabs="tabs">
+                <li class="active" ><a href="#genre">Genre Summary</a></li>
+                <li><a href="#games">Games</a></li>
+            </ul>
+            <div class ="pill-content">
+                <div class="active" id="genre">
+                    <div class="span9">
+                        <table id="summaryScores" class="zebra-striped">
+                            <thead>
+                                <tr>
+                                    <th>Genre</th>
+                                    <th class="right">@Model.Player1.Name</th>
+                                    <th class="right">@Model.Player2.Name</th>
+                                    <th class="right">Difference</th>
+                                    <th class="right">W</th>
+                                    <th class="right">L</th>
+                                    <th class="right">T</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @{
+                                    foreach (var genre in Model.Genre)
+                                    {
+                                        <tr>
+                                            <td>@genre.Genre</td>
+                                            <td class="right">@genre.Tag1Score</td>
+                                            <td class="right">@genre.Tag2Score</td>
+                                            <td class="right">@{@Html.Raw((genre.Tag1Score - genre.Tag2Score).ToString())}</td>
+                                            <td class="right">@genre.Wins</td>
+                                            <td class="right">@genre.Loses</td>
+                                            <td class="right">@genre.Ties</td>
+                                        </tr>
               
-                }
-                      }
-                      </tbody>
-                  </table>
+                                    }
+                                }
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
-            </div>
 
-            <div id="games">
-                <div class="row">
-                <div class="span4">
-                    <span>Click a Genre to filter the games list</span>
-                    <ul>
-                        @foreach (string genre in Model.Genre.Select(a => a.Genre).Distinct())
-                        {
-                             <li>@Html.Raw(genre)</li>
-                        }
+                <div id="games">
+                    <div class="row">
+                        <div class="span4" id="genres">
+                            <span>Click a Genre to filter the games list</span>
+                            <ul>
+                                @foreach (string genre in Model.Genre.Select(a => a.Genre).Distinct())
+                                {
+                                    <li>@Html.Raw(genre)</li>
+                                }
                        
-                    </ul>
-                </div>
+                            </ul>
+                        </div>
 
-                <div class="span12">
-                    <table id="detailGames" class="zebra-striped">
-                        <thead>
-                            <tr>
-                                <th></th>
-                                <th>Game</th>
-                                <th>@Model.Player1.Name</th>
-                                <th>@Model.Player2.Name</th>
-                                <th>Difference</th>
-                                <th>Genre</th>
-                                <th>Last Played</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                    @{
-                        foreach (var game in Model.Games.OrderByDescending(a => a.LastPayed))
-                        {
-                            <tr>
-                                <td><img src="@game.Tile" width="32" height="32" alt="@game.Name" /></td>
-                                <td>@game.Name</td>
-                                <td class="right">@game.Tag1Score</td>
-                                <td class="right">@game.Tag2Score</td>
-                                <td class="right">@game.Difference</td>
-                                <td>@game.Genre</td>
-                                <td class="right">@game.LastPayed.ToString("d")</td>
-                            </tr>
-                        }
+                        <div class="span12">
+                            <table id="detailGames" class="zebra-striped">
+                                <thead>
+                                    <tr>
+                                        <th></th>
+                                        <th>Game</th>
+                                        <th>@Model.Player1.Name</th>
+                                        <th>@Model.Player2.Name</th>
+                                        <th>Difference</th>
+                                        <th>Genre</th>
+                                        <th>Last Played</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @{
+                                        foreach (var game in Model.Games.OrderByDescending(a => a.LastPayed))
+                                        {
+                                            <tr class="@game.Genre.Replace(" ","")">
+                                                <td><img src="@game.Tile" width="32" height="32" alt="@game.Name" /></td>
+                                                <td>@game.Name</td>
+                                                <td class="right">@game.Tag1Score</td>
+                                                <td class="right">@game.Tag2Score</td>
+                                                <td class="right">@game.Difference</td>
+                                                <td>@game.Genre</td>
+                                                <td class="right">@game.LastPayed.ToString("d")</td>
+                                            </tr>
+                                        }
                 
-                    }
-                     </tbody>
-                  </table>
-                </div>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    }
-    else
-    {          
-        <span class="span16">
-        @{
-        string x = string.Empty;
-        if (!Model.Player1.Valid)
-        {
-            x = Model.Player1.Name + " is not a valid gaemrtag.";
         }
+        else
+        {          
+            <span class="span16">
+                @{
+                    string x = string.Empty;
+                    if (!Model.Player1.Valid)
+                    {
+                        x = Model.Player1.Name + " is not a valid gaemrtag.";
+                    }
 
-        if (!Model.Player2.Valid)
-        {
-            x += "<br>" + Model.Player2.Name + " is not a valid gaemrtag.";
-        }
-        }
+                    if (!Model.Player2.Valid)
+                    {
+                        x += "<br>" + Model.Player2.Name + " is not a valid gaemrtag.";
+                    }
+                }
             
         
-        @Html.Raw(x) <br />Gamertag must have an account at <a href="http://360voice.gamerdna.com/">360voice</a>.</span>
+                @Html.Raw(x) <br />Gamertag must have an account at <a href="http://360voice.gamerdna.com/">360voice</a>.</span>
+        }
     }
- }
-  </div>
+</div>
+
+<script type="text/javascript">
+    $("#genres li").on('click', function (e) {
+        var genre = this.innerHTML.replace(" ", "");
+        alert(genre);
+        if (genre == "All") {
+            $("#detailGames tr").show();
+        } else {
+            $("#detailGames tbody tr").not($("."+genre)).hide();
+        }
+    });
+</script>
