fix replace bug in genre select
only first instance was being replace.

--- a/Compare/Views/Home/Compare.cshtml
+++ b/Compare/Views/Home/Compare.cshtml
@@ -161,8 +161,8 @@
 <script type="text/javascript">
     $("#genres li").on('click', function (e) {
         $("#genres li").removeClass("selected");
-        var genre = this.innerHTML.replace(" ", "");
-        
+        var genre = this.innerHTML.replace(new RegExp(" ", "g"), "");
+
         $("#detailGames tr").show();
         if (genre != "All") {
             $("#detailGames tbody tr").not($("."+genre)).hide();
